# messenger_server

./: Cargo.toml  Makefile  cert.pem  key.pem
migrations/: 20241124094341_init.down.sql  20241124094341_init.up.sql
src/: lib.rs  main.rs  startup.rs
src/extractors/: mod.rs
src/jwtauth/: mod.rs
src/route/: mod.rs
